# PdeFiniteDifferenceKernels

./: .gitignore  .gitmodules  CMakeLists.txt  FiniteDifferenceTypes.h  PdeFiniteDifference.cu  PdeFiniteDifference.cuh  PdeFiniteDifference1D.cu  PdeFiniteDifference1D.cuh  PdeFiniteDifference2D.cu  PdeFiniteDifference2D.cuh  PdeFiniteDifferenceKernels.sln  PdeFiniteDifferenceKernels.vcxproj  PdeFiniteDifferenceKernels.vcxproj.filters  README.md
PdeFiniteDifferenceKernels/: FiniteDifferenceTypes.h  PdeFiniteDifference1D.cu  PdeFiniteDifference1D.cuh  PdeFiniteDifferenceKernels.vcxproj  kernel.cu
